opensource/rabbitmq/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
  - protocol: TCP
    name: rabbitmq-port
    port: 5672
    targetPort: 5672
  - protocol: TCP
    name: rabbitmqmanagement-port
    port: 15672
    targetPort: 15672
